add portfolio projects, and fix css for dark mode

--- a/ArifTanPortfolio/appsettings.json
+++ b/ArifTanPortfolio/appsettings.json
@@ -5,17 +5,17 @@
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "FromEmail": "your-email@gmail.com",
+    "FromEmail": "ariftan7788@gmail.com",
     "FromName": "Arif Tan Portfolio",
-    "Username": "your-email@gmail.com",
-    "Password": "your-app-password"
+    "Username": "ariftan7788@gmail.com",
+    "Password": "dwns sxhd nckd pqtv"
   },
   "SiteSettings": {
     "SiteName": "Arif Tan - Software Engineer",
     "SiteDescription": "Professional portfolio of Arif Tan, Software Engineer specializing in .NET, logistics systems, and enterprise solutions",
     "SiteUrl": "https://ariftan.dev",
-    "LinkedInUrl": "https://linkedin.com/in/ariftan",
-    "GitHubUrl": "https://github.com/ariftan",
+    "LinkedInUrl": "https://linkedin.com/in/ariftan2212",
+    "GitHubUrl": "https://github.com/Ariftan77",
     "TwitterUrl": "https://twitter.com/ariftan_dev"
   },
   "Logging": {
