--- a/ArifTanPortfolio/appsettings.json
+++ b/ArifTanPortfolio/appsettings.json
@@ -8,12 +8,12 @@
     "FromEmail": "ariftan7788@gmail.com",
     "FromName": "Arif Tan Portfolio",
     "Username": "ariftan7788@gmail.com",
-    "Password": "dwns sxhd nckd pqtv"
+    "Password": "dummy"
   },
   "SiteSettings": {
     "SiteName": "Arif Tan - Software Engineer",
     "SiteDescription": "Professional portfolio of Arif Tan, Software Engineer specializing in .NET, logistics systems, and enterprise solutions",
-    "SiteUrl": "https://ariftan.dev",
+    "SiteUrl": "https://ariftan.com",
     "LinkedInUrl": "https://linkedin.com/in/ariftan2212",
     "GitHubUrl": "https://github.com/Ariftan77",
     "TwitterUrl": "https://twitter.com/ariftan_dev"
