--- a/ArifTanPortfolio/ArifTanPortfolio.csproj
+++ b/ArifTanPortfolio/ArifTanPortfolio.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>adbb727d-8c38-421e-82db-05515d1a596a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
