--- a/ArifTanPortfolio/appsettings.json
+++ b/ArifTanPortfolio/appsettings.json
@@ -7,13 +7,12 @@
     "SmtpPort": 587,
     "FromEmail": "ariftan7788@gmail.com",
     "FromName": "Arif Tan Portfolio",
-    "Username": "ariftan7788@gmail.com",
-    "Password": "dummy"
+    "Username": "ariftan7788@gmail.com"
   },
   "SiteSettings": {
     "SiteName": "Arif Tan - Software Engineer",
     "SiteDescription": "Professional portfolio of Arif Tan, Software Engineer specializing in .NET, logistics systems, and enterprise solutions",
-    "SiteUrl": "https://ariftan.com",
+    "SiteUrl": "https://ariftan.dev",
     "LinkedInUrl": "https://linkedin.com/in/ariftan2212",
     "GitHubUrl": "https://github.com/Ariftan77",
     "TwitterUrl": "https://twitter.com/ariftan_dev"
