--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -40,3 +40,8 @@ jobs:
       with:
         files: ./coverage.opencover.xml
         fail_ci_if_error: true
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}        
